re PR middle-end/33290 (gcc.c-torture/execute/930921-1.c fails at -O1 and above now)

gcc/
	PR middle-end/33290
	* optabs.c (avoid_expensive_constant): Canonicalize CONST_INTs
	before forcing them into a register.

From-SVN: r128048